# Stockwise

./: .env.example  .gitattributes  .gitignore  .stylelintrc.json  .tmp_ref_cols.sql  .vercelignore  AGENTS.md  BRAND_KIT_INSTRUCTIONS.md  README.md  SUPABASE_AUTH_REDIRECTS.md  eslint.config.js  generate-icons.js  generate-tauri-icons.js  index.html  missing_translations.txt  package-lock.json  package.json  restored_translations.txt  runbook-insert.json  runbook.json  tailwind.config.cjs  tmp_digest_query.js  tmp_digest_state_query.js  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
.codex/: config.toml
.playwright-cli/: page-2026-04-28T21-57-14-087Z.yml
.tmp/: digest_queue_live.json  digest_state_live.json  due_reminder_queue_live.json
.tmp-ui-validation/: callback-flow.js  clean-flow.js  clean-settings-assert.js  clean-settings-correct.js  clean-settings-probe.js  createchoice-mobile-flow.js  desktopinvite-flow.js  expired-invite-flow.js  freshinvite-flow.js  invited-flow.js  onboarding-seed.json  owner-dashboard-flow.js  stranger-onboarding-flow.js  wrong-account-invite-flow.js
docs/: API.md  ARCHITECTURE.md  AVAILABILITY_AND_RECOVERY.md  CANONICAL_MIGRATION_BASELINE_2026-04-19.md  COMPONENTS.md  CONTRIBUTING.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  MOBILE_IMPROVEMENTS_SUMMARY.md  MOBILE_OPTIMIZATION.md  MONITORING.md  README.md  SECURITY_AND_SCALE_BASELINE.md  STOCKWISE_DATABASE_SCHEMA.md  STOCKWISE_DEPLOYMENT_GUIDE.md  STOCKWISE_EXECUTIVE_SUMMARY.md  STOCKWISE_FEATURES_OVERVIEW.md  STOCKWISE_USER_GUIDE.md  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+484 files in other folders)
