[package]
name = "stockwise"
version = "1.3.1"
description = "StockWise desktop and Android shell for inventory, Point of Sale, cash, and finance operations"
authors = ["StockWise"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "stockwise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-shell = "2.3.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
